K8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tektonhomework-deployment
  namespace: ubercloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tektonhomework
  template:
    metadata:
      labels:
        app: tektonhomework
    spec:
      containers:
      - name: tektonhomework
        image: docker.io/tektonhomework:latest
        ports:
        - containerPort: 8080        
        resources:
          limits:
            cpu: "0.5"
            memory: "512Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
