K8S/lbservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: tektonhomework-service-lb
  namespace: ubercloud
spec:
  type: LoadBalancer
  selector:
    app: tektonhomework-pod
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8080
