K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tektonhomework-service
  namespace: ubercloud
spec:
  type: NodePort
  selector:
    app: tektonhomework-pod
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8080
